--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     </section>
 
     <section class="why-web-development">
+      <img src="images/Hero-bg.png" alt="" />
       <h2>Why Web Development?</h2>
       <div class="reasons">
         <div class="reason">
