--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     </header>
 
     <section class="intro">
+      <img src="images/Hero-bg.png>"
       <h2>"In the near future, I hope to become a Developer."</h2>
       <p>
         I am passionate about technology and eager to transform ideas into
@@ -24,7 +25,6 @@
     </section>
 
     <section class="why-web-development">
-      <img src="images/Hero-bg.png" alt="" />
       <h2>Why Web Development?</h2>
       <div class="reasons">
         <div class="reason">
