--- a/index.html
+++ b/index.html
@@ -3,140 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mohammed Shohel</title>
-    <link rel="stylesheet" href="./Styles/style.css" />
+    <title>Web Developer Poftfolio</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
-  <body>
-    <header>
-      <h1>Mohammed Shohel</h1>
-      <a href="#" class="download-resume">Download Resume</a>
-    </header>
-
-    <section class="intro">
-      <img src="images/Hero-bg.png>"
-      <h2>"In the near future, I hope to become a Developer."</h2>
-      <p>
-        I am passionate about technology and eager to transform ideas into
-        reality through code. My goal is to become a proficient developer who
-        can contribute to innovative projects and make a positive impact on the
-        world.
-      </p>
-      <button>Contact with me</button>
-    </section>
-
-    <section class="why-web-development">
-      <h2>Why Web Development?</h2>
-      <div class="reasons">
-        <div class="reason">
-          <h3>Building Impactful Solutions</h3>
-          <p>
-            Web development allows me to create applications that can solve
-            real-world problems, making a difference in people's lives through
-            technology.
-          </p>
-        </div>
-        <div class="reason">
-          <h3>Empowering Others with Modern Systems</h3>
-          <p>
-            By developing modern web systems, I can help individuals and
-            businesses streamline their processes and achieve their goals more
-            efficiently.
-          </p>
-        </div>
-        <div class="reason">
-          <h3>Continuous Learning and Innovation</h3>
-          <p>
-            The field of web development is constantly evolving, providing
-            endless opportunities for learning new technologies and pushing the
-            boundaries of innovation.
-          </p>
-        </div>
-      </div>
-    </section>
-
-    <section class="inspiration">
-      <h2>My Inspiration</h2>
-      <div class="video-container">
-        <iframe
-          width="80%"
-          height="50%"
-          src="https://www.youtube.com/watch?v=p0F-k3C1zns"
-          frameborder="0"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-          allowfullscreen
-        ></iframe>
-      </div>
-      <p>
-        I draw inspiration from industry leaders and successful developers who
-        have made significant contributions to technology. Their journeys
-        motivate me to pursue excellence and strive for continuous improvement
-        in my own career.
-      </p>
-    </section>
-
-    <section class="targets">
-      <h2>My Current Target</h2>
-      <div class="target">
-        <div class="target-item">
-          <h3>HTML</h3>
-          <p>Mastering HTML to create structured and accessible web content.</p>
-        </div>
-        <div class="target-item">
-          <h3>CSS</h3>
-          <p>
-            Enhancing my CSS skills to design visually appealing and responsive
-            websites.
-          </p>
-        </div>
-        <div class="target-item">
-          <h3>JavaScript</h3>
-          <p>
-            Deepening my knowledge of JavaScript to build dynamic and
-            interactive web applications.
-          </p>
-        </div>
-      </div>
-
-      <h2>My Next Target</h2>
-      <div class="target">
-        <div class="target-item">
-          <h3>ReactJS</h3>
-          <p>
-            Learning ReactJS to develop efficient and scalable front-end
-            applications.
-          </p>
-        </div>
-        <div class="target-item">
-          <h3>NodeJs</h3>
-          <p>
-            Exploring NodeJs to build robust and high-performance back-end
-            services.
-          </p>
-        </div>
-        <div class="target-item">
-          <h3>MongoDB</h3>
-          <p>
-            Understanding MongoDB to implement flexible and scalable database
-            solutions.
-          </p>
-        </div>
-      </div>
-    </section>
-
-    <section class="support">
-      <h2>I Need Support</h2>
-      <form>
-        <input type="text" placeholder="Suggest any feedback for me" />
-        <button type="submit">Submit</button>
-      </form>
-    </section>
-
-    <footer>
-      <p>An Open Commitment by Awlad Hossain</p>
-      <div class="social-links">
-        <a href="#">Facebook</a>
-        <a href="#">LinkedIn</a>
-      </div>
-    </footer>
-  </body>
+  <body></body>
 </html>
