3rd-deadline-working-midnight

--- a/index.html
+++ b/index.html
@@ -6,5 +6,23 @@
     <title>Web Developer Poftfolio</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <section class="section-banner">
+      <div class="banner-items">
+        <img
+          class="banner-image"
+          src="./Assets/images/Group.png"
+          alt="Group.png"
+        />
+        <h1 class="banner-tittle">
+          "In the near future, I hope to become a Developer."
+        </h1>
+        <p class="banner-paragraph">
+          Lorem Ipsum is simply dummy text of the printing and typesetting
+          industry. Lorem Ipsum has been the industry's standard dummy text.
+        </p>
+        <button class="button-primary">Contact with me</button>
+      </div>
+    </section>
+  </body>
 </html>
