evening to morning still working

--- a/index.html
+++ b/index.html
@@ -7,20 +7,21 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <!-- Navbar -->
+    <!-- Header -->
     <header class="header">
-      <nav class="nav">
+      <div class="navbar main-container">
         <h1 class="logo">Awlad.h</h1>
-        <ul class="nav-links">
-          <li><a href="#button" class="nav-link">Download Resume</a></li>
-        </ul>
-      </nav>
+        <nav class="navbar">
+          <ul class="navbar-links">
+            <li><a href="#button" class="navbar-link">Download Resume</a></li>
+          </ul>
+        </nav>
+      </div>
     </header>
-    <!-- End Navbar -->
 
     <!-- Hero Section -->
-    <section class="hero">
-      <div class="hero-content">
+    <section class="hero-section">
+      <div class="main-container">
         <img
           class="hero-image"
           src="./Assets/images/Group.png"
@@ -36,13 +37,12 @@
         <button class="btn-primary">Contact Me</button>
       </div>
     </section>
-    <!-- End Hero Section -->
 
-    <!-- Container for Sections -->
-    <div class="container-sections">
-      <!-- Why Web Dev Section -->
+    <!-- Main Content Container -->
+    <div class="main-container">
+      <!-- Why Web Development Section -->
       <section class="why-web-dev">
-        <div class="why-web-dev-content">
+        <div class="section-content">
           <h2 class="section-title">Why Web Development?</h2>
           <p class="section-paragraph">
             Web development is crucial in today's digital age. It allows me to
@@ -50,11 +50,10 @@
           </p>
         </div>
       </section>
-      <!-- End Why Web Dev Section -->
 
       <!-- I Will Do Section -->
       <section class="i-will-do">
-        <div class="i-will-do-content">
+        <div class="section-content">
           <h3 class="subsection-title">
             I Will Do Coding and Change The World
           </h3>
@@ -64,12 +63,142 @@
           </p>
           <button class="btn-secondary">Learn More</button>
         </div>
-        <div class="i-will-do-image">
+        <div class="section-image">
           <img src="./Assets/images/Layer_1.png" alt="Layer.png" />
         </div>
       </section>
-      <!-- End I Will Do Section -->
+
+      <!-- I Will Help Section -->
+      <section class="i-will-help">
+        <div class="section-image">
+          <img src="./Assets/images/Group 3.png" alt="group-3.png" />
+        </div>
+        <div class="section-content">
+          <h3 class="subsection-title">
+            I will help People by creating Modern Web System
+          </h3>
+          <p class="subsection-paragraph">
+            By leveraging web technologies, I aim to create impactful
+            applications that solve real-world problems.
+          </p>
+          <button class="btn-secondary">Learn More</button>
+        </div>
+      </section>
+
+      <!-- I Will Do Change Section -->
+      <section class="i-will-do-change">
+        <div class="section-content">
+          <h3 class="subsection-title">
+            I Will Do Coding and Change The World
+          </h3>
+          <p class="subsection-paragraph">
+            By leveraging web technologies, I aim to create impactful
+            applications that solve real-world problems.
+          </p>
+          <button class="btn-secondary">Learn More</button>
+        </div>
+        <div class="section-image">
+          <img src="./Assets/images/Group 4.png" alt="group-4.png" />
+        </div>
+      </section>
+
+      <!-- Inspiration Section -->
+      <section class="why-web-dev">
+        <div class="section-content">
+          <h2>My Inspiration</h2>
+          <p class="section-paragraph">
+            Web development is crucial in today's digital age. It allows me to
+            create innovative solutions and reach a global audience.
+          </p>
+        </div>
+      </section>
+
+      <!-- Video Section -->
+      <section class="video-container">
+        <iframe
+          src="https://www.youtube.com/embed/DGHn2uOAVCE"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen
+        ></iframe>
+      </section>
+
+      <!-- My Current Target Section -->
+      <section class="current-target">
+        <div class="section-content">
+          <h2 class="section-title">My Current Target</h2>
+          <p class="section-paragraph">
+            Lorem Ipsum is simply dummy text of the printing and typesetting
+            industry. Lorem Ipsum has been the industry's standard dummy text.
+          </p>
+        </div>
+
+        <div class="skills-container">
+          <div class="skill">
+            <img src="./Assets/icons/html.png" alt="HTML Icon" />
+            <h4 class="skill-title">HTML</h4>
+            <p class="skill-description">
+              Lorem Ipsum is simply dummy text of the printing.
+            </p>
+          </div>
+
+          <div class="skill">
+            <img src="./Assets/icons/css.png" alt="CSS Icon" />
+            <h4 class="skill-title">CSS</h4>
+            <p class="skill-description">
+              Lorem Ipsum is simply dummy text of the printing.
+            </p>
+          </div>
+
+          <div class="skill">
+            <img src="./Assets/icons/js.png" alt="JavaScript Icon" />
+            <h4 class="skill-title">JavaScript</h4>
+            <p class="skill-description">
+              Lorem Ipsum is simply dummy text of the printing.
+            </p>
+          </div>
+        </div>
+      </section>
+
+      
+      <!-- My next Target Section starts here -->
+      <section class="current-target">
+        <div class="section-content">
+          <h2 class="section-title">My Current Target</h2>
+          <p class="section-paragraph">
+            Lorem Ipsum is simply dummy text of the printing and typesetting
+            industry. Lorem Ipsum has been the industry's standard dummy text.
+          </p>
+        </div>
+
+        <div class="skills-container">
+          <div class="skill">
+            <img src="./Assets/icons/html.png" alt="HTML Icon" />
+            <h4 class="skill-title">HTML</h4>
+            <p class="skill-description">
+              Lorem Ipsum is simply dummy text of the printing.
+            </p>
+          </div>
+
+          <div class="skill">
+            <img src="./Assets/icons/css.png" alt="CSS Icon" />
+            <h4 class="skill-title">CSS</h4>
+            <p class="skill-description">
+              Lorem Ipsum is simply dummy text of the printing.
+            </p>
+          </div>
+
+          <div class="skill">
+            <img src="./Assets/icons/js.png" alt="JavaScript Icon" />
+            <h4 class="skill-title">JavaScript</h4>
+            <p class="skill-description">
+              Lorem Ipsum is simply dummy text of the printing.
+            </p>
+          </div>
+        </div>
+      </section>
+      <!-- my next target section edns herer -->
     </div>
-    <!-- End Container for Sections -->
+    <!-- End Main Content Container -->
   </body>
 </html>
