--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
       <!-- NodeJs section starts -->
       <section class="next-target-skills">
         <div>
-          <img src="./Assets/icons/NodeJs.png" alt="ReactJS Icon" />
+          <img src="./Assets/icons/Nodejs.png" alt="ReactJS Icon" />
         </div>
 
         <div>
@@ -198,7 +198,7 @@
       <!-- MongoDB section starts -->
       <section class="next-target-skills">
         <div>
-          <img src="./Assets/icons/MongoDB.png" alt="ReactJS Icon" />
+          <img src="./Assets/icons/Mongodb.png" alt="ReactJS Icon" />
         </div>
 
         <div>
